--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,22 @@ nav {
     cursor: pointer;
 }
 
+.transform .image {
+    background: url("/sunnyside-landing-page/images/mobile/image-transform.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+}
+
+.stand-out .image {
+    background: url("/sunnyside-landing-page/images/mobile/image-stand-out.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+}
+
 .message h2{
     font-family: 'Fraunces', serif;
     margin: 60px 30px 30px 30px;
@@ -143,7 +159,28 @@ nav {
     color: black;
     font-size: 1.2rem;
     text-transform: uppercase;
-    text-decoration: 6px underline rgb(248, 178, 172);
+    position: relative;
+}
+
+.line {
+    position: absolute;
+    width: 100px;
+    border-radius: 4px;
+    z-index: -1;
+    right: -5px;
+    top: 11px;
+}
+
+.line1 {
+    height: 2px;
+    border: 4px solid rgba(239, 239, 145, 0.408);
+
+}
+
+.line2 {
+    height: 2px;
+    border: 4px solid rgba(229, 179, 179, 0.386);
+
 }
 
 .parent-relative {
@@ -167,8 +204,27 @@ nav {
     font-size: 1rem;
 }
 
+
+
+.graphic-design-background {
+    background: url("/sunnyside-landing-page/images/mobile/image-graphic-design.jpg");
+}
+
 .graphic-design {
     color: var(--dark-desaturated-cyan);
+    
+}
+
+.photography-background {
+    background: url("/sunnyside-landing-page/images/mobile/image-photography.jpg");
+}
+
+.graphic-design-background,
+.photography-background {
+    height: 600px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .photography {
@@ -213,6 +269,29 @@ nav {
     grid-template-columns: repeat(2, 1fr);
 }
 
+.milkbottles {
+    background: url("/sunnyside-landing-page/images/mobile/image-gallery-milkbottles.jpg");
+}
+.orange {
+    background: url("/sunnyside-landing-page/images/mobile/image-gallery-orange.jpg");
+}
+.cone {
+    background: url("/sunnyside-landing-page/images/mobile/image-gallery-cone.jpg");
+}
+.sugar-cubes {
+    background: url("/sunnyside-landing-page/images/mobile/image-gallery-sugar-cubes.jpg");
+}
+
+.milkbottles,
+.orange,
+.cone,
+.sugar-cubes {
+    height: 200px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 .footer {
     background-color: rgb(147, 218, 205);
     color: #2C7566;
@@ -255,4 +334,183 @@ nav {
 
 .social-media img {
     margin: 0 15px;
+}
+
+@media (min-width:700px) {
+    .top-section {
+        background: url("/images/desktop/image-header.jpg");
+        /* background: url("/sunnyside-landing-page/images/mobile/image-header.jpg"); */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .top-section h1 {
+        color: white;
+        text-transform: uppercase;
+        font-size: 2.4rem;
+        height: 275px;
+        background: url("/sunnyside-landing-page/images/icon-arrow-down.svg");
+        /* background: url("/sunnyside-landing-page/images/icon-arrow-down.svg"); */
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size: 30px;
+        padding-top: 60px;
+        letter-spacing: 0.6rem;
+    }
+
+    nav {
+        display: flex;
+        align-items: center;
+    }
+
+    .right-side {
+        display: flex;
+        background-color: transparent;
+        align-items: center;
+    }
+
+    .right-side a {
+        text-decoration: none;
+        color: var(--white);
+        padding: 0 20px;
+        font-size: 0.9rem;
+    }
+
+    .hamburger, .triangle {
+        display: none;
+    }
+
+    .right-side a:last-child {
+        background-color: var(--white);
+        padding: 12px 33px;
+        border-radius: 46px;
+        color: black;
+        text-transform: uppercase;
+        font-family: 'Fraunces', serif;
+        font-size: 0.8rem;
+    }
+
+    .transform, 
+    .stand-out, 
+    .graphic-photography {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .transform .image {
+        background: url("/sunnyside-landing-page/images/desktop/image-transform.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 500px;
+        order: 1;
+    }
+
+    .stand-out .image {
+        background: url("/sunnyside-landing-page/images/desktop/image-stand-out.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 500px;
+    }
+    
+    .message {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        text-align: left;
+        padding: 0 60px;
+    }
+
+    .message h2 {
+        font-size: 1.3rem;
+        line-height: 1.2;
+    }
+
+    .message p {
+        font-size: 1rem;
+    }
+
+    .message a {
+        padding-left: 30px;
+        font-size: 0.8rem;
+    }
+  
+    .graphic-design-background {
+        background: url("/sunnyside-landing-page/images/desktop/image-graphic-design.jpg");
+    }
+
+    .photography-background {
+        background: url("/sunnyside-landing-page/images/desktop/image-photography.jpg");
+    }
+
+    .graphic-design-background,
+    .photography-background {
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .child-absolute p {
+        padding: 0 30px;
+        font-size: 0.8rem;
+    }
+
+    .testimonials h2{
+        padding-top: 80px;
+        padding-bottom: 30px;
+    }
+
+    .testimonials-flexbox {
+        display: flex;
+        padding: 0 50px;
+    }
+    
+    .single-testimonial h5 {
+        padding: 0 10px;
+        margin-bottom: 70px;
+    }
+
+    .gallery-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .milkbottles {
+        background: url("/sunnyside-landing-page/images/desktop/image-gallery-milkbottles.jpg");
+    }
+
+    .orange {
+        background: url("/sunnyside-landing-page/images/desktop/image-gallery-orange.jpg");
+    }
+
+    .cone {
+        background: url("/sunnyside-landing-page/images/desktop/image-gallery-cone.jpg");
+    }
+
+    .sugar-cubes {
+        background: url("/sunnyside-landing-page/images/desktop/image-gallery-sugarcubes.jpg");
+    }
+
+    .milkbottles,
+    .orange,
+    .cone,
+    .sugar-cubes {
+        height: 500px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+}
+
+@media (min-width: 840px) {
+    .message h2 {
+        font-size: 2.7rem;
+    }
+
+    .child-absolute p {
+        padding: 0 120px;
+    }
 }
