js to toggle class base on screen size

--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,7 @@ nav {
 
     .right-side {
         display: flex;
+        flex-direction: row;
         background-color: transparent;
         align-items: center;
     }
