--- a/css/style.css
+++ b/css/style.css
@@ -368,6 +368,7 @@ nav {
         flex-direction: row;
         background-color: transparent;
         align-items: center;
+        position: static;
     }
 
     .right-side a {
